syntax = "proto3";

option csharp_namespace = "Sisa.Identity.Api.V1.Roles.Responses";

package sisa.identity.api.v1.roles.responses;

import "google/protobuf/wrappers.proto";

import "sisa/libs/common/responses/paging_info_response.proto";
import "sisa/libs/common/responses/actor_info_response.proto";

message RoleResponse {
  // reversed field must be reflect to the database
  reserved 7 to 50; // other data fields
  reserved 52 to 60; // relationship fields
  reserved 63 to 70; // audit fields

  // data fields: from 1 to 50
  string id = 1;
  string name = 2;
  google.protobuf.StringValue description = 3;
  bool predefined = 4;
  bool enabled = 5;
  repeated string permissions = 6;

  // relationship fields: from 51 to 60

  // audit fields: from 63 to 70
  // sisa.common.responses.ActorInfoResponse creator = 61;
  // sisa.common.responses.ActorInfoResponse updater = 62;
}

message ListRolesResponse {
  repeated RoleResponse value = 1;
  sisa.common.responses.PagingInfoResponse paging = 2;
}
